applications/trending-trawler/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 8000
