applications/trending-trawler/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    # kubernetes.io/tls-acme: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: kong
spec:
  # tls:
  # - secretName: api-tls-secret
  #   hosts:
  #   - webapp.lhs.world
  rules:
    - host: api.trending-trawler.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
